test/open.bugs.txt
Kiran Patchigolla kiran@jolata.com 54b716077b1047516695d5e9
PUT /v1/api/requests/54b7167a759ef409005c6a67 << https://www.airpair.com/help/request || isBot:false:Mozilla/5.0 (iPhone; CPU iPhone OS 8_1 like Mac OS X) AppleWebKit/600.1.4 (KHTML, like Gecko) Version/8.0 Mobile/12B411 Safari/600.1.4
Cannot call method 'toString' of undefined
TypeError: Cannot call method 'toString' of undefined
    at Function.util.idsEqual (/app/util.js:79:32)
    at Object.validation.updateByCustomer (/app/requests.js:20:10)
    at /app/_api.js:63:43
    at Layer.handle [as handle_request] (/app/node_modules/express/lib/router/layer.js:82:5)
    at next (/app/node_modules/express/lib/router/route.js:100:13)
    at middleware.authd (/app/auth.js:51:39)
    at Layer.handle [as handle_request] (/app/node_modules/express/lib/router/layer.js:82:5)
    at next (/app/node_modules/express/lib/router/route.js:100:13)
    at Route.dispatch (/app/node_modules/express/lib/router/route.js:81:3)
    at Layer.handle [as handle_request] (/app/node_modules/express/lib/router/layer.js:82:5)



meyers.drew@gmail.com
2015-01-14T18:45:28.068292+00:00 app[web.2]: /app/node_modules/lodash/dist/lodash.js:3216
           if (callback(value, index, collection)) {
               ^
 ReferenceError: idsEqual is not defined
     at /app/util.js:126:15
     at Function.find (/app/node_modules/lodash/dist/lodash.js:3216:15)
     at Object.util.combineItems (/app/util.js:125:21)
     at /app/users.js:113:31
     at Promise.searchOne (/app/_service.js:29:9)
     at Promise.<anonymous> (/app/node_modules/mongoose/node_modules/mpromise/lib/promise.js:177:8)
     at Promise.emit (events.js:95:17)
     at Promise.emit (/app/node_modules/mongoose/node_modules/mpromise/lib/promise.js:84:38)
     at Promise.fulfill (/app/node_modules/mongoose/node_modules/mpromise/lib/promise.js:97:20)
     at Promise.resolve (/app/node_modules/mongoose/lib/promise.js:114:23)



REQUEST avi@kensodev.com > start https://www.airpair.com/adm/pipeline/54b94a7cbfe6cb0900926095
2015-01-16T17:29:32.120269+00:00 app[web.2]: ******* Should impl request started email
svc.create.error { [ValidationError: Validation failed]
  message: 'Validation failed',
  name: 'ValidationError',
  errors:
   { 'tags.0._id':
      { [ValidatorError: Path `_id` is required.]
        message: 'Path `_id` is required.',
        name: 'ValidatorError',
        path: '_id',
        type: 'required',
        value: undefined } } }
cbSend.400 avi@kensodev.com /requests {"tags":[{"desc":"Go, also called golang, is an opensource programming language initially developed at Google. It is a statically-typed language with syntax loosely derived from that of C, adding automatic memory management, type safety, some dynamic-typing capabilities, additional built-in types such as variable-length arrays and key-value maps, and a large standard library.","name":"go","short":"go","slug":"go","score":21.41315789473684,"sort":0},{"_id":"5181d0aa66a6f999a465ed8e","desc":"Test-Driven Development (TDD) involves writing a failing automated test to specify what is to be built. The test is then made to pass by writing code which satisfies the tested condition. Finally, the code is refactored.","name":"tdd","short":"tdd","slug":"tdd","score":21.422727272727272,"sort":1}],"type":"mentoring","by":{"name":"Avi Tzurel","email":"avi@kensodev.com","avatar":"//0.gravatar.com/avatar/b7d890bed68fa564c18ff00dfd8207cd"},"_id":"54b94a7cbfe6cb0900926095","userId":"532af5eb1c67d1a4859d28c1","status":"received"} { [ValidationError: Validation failed]
   message: 'Validation failed',
   name: 'ValidationError',
   errors:
    { 'tags.0._id':
       { [ValidatorError: Path `_id` is required.]
         message: 'Path `_id` is required.',
         name: 'ValidatorError',
         path: '_id',
         type: 'required',
         value: undefined } } }




GET /v1/api/posts/tag/partners << https://www.airpair.com/posts/tag/partners || isBot:false:Mozilla/5.0 (compatible; Baiduspider/2.0; +http://www.baidu.com/search/spider.html)
tag not found. Back to tags
Error: tag not found. Back to tags



cbSend.400 mattlo.developer@gmail.com /requests/54acabf07389cf0b00eb8254 {"_id":"54acabf07389cf0b00eb8254","userId":"546678e78f8c80299bcc506a","by":{"avatar":"//0.gravatar.com/avatar/26b312fb15048201616ab0c2115f8ebc","email":"mattlo.developer@gmail.com","name":"Matt Lo"},"type":"other","tags":[],"status":"received","suggested":[]} { [Error: Request must include at least one technology] status: 403 }


cbSend.400 patrickmgarman@gmail.com /requests/54aba41abef06b0b007ffbde {"_id":"54aba41abef06b0b007ffbde","by":{"avatar":"//0.gravatar.com/avatar/35b913bda9f12817929e61571b913354","email":"gjavaxishvili@list.ru","name":"goga javaxishvili"},"type":"code-review","brief":"I need a web page review to see the problems or bugs, if there is a  a week points and get a full list of this problems","tags":[{"_id":"514825fa2a26ea020000002b","slug":"php","sort":0}],"time":"regular","hours":"1","experience":"advanced","status":"received","suggested":[{"expert":{"__v":1,"_id":"5321ad9db976900200000036","availability":"","brief":"I am a backend PHP developer specializing in WordPress, and I work regularly with WooCommerce, Easy Digital Downloads, AppPresser, and other commonly used premium plugins (many of which I have contributed to!).","email":"patrickmgarman@gmail.com","gh":{"id":502720,"username":"pmgarman","location":"Cuba, IL","blog":"http://pmgarman.me","gravatar_id":"25301bdb527e5665782958948a627b65","followers":19},"gmail":"patrickmgarman@gmail.com","homepage":"pmgarman.me","hours":"5-10","in":{"id":"v-4N4oATfu","displayName":"Patrick Garman"},"karma":0,"minRate":70,"name":"Patrick Garman","pic":"https://secure.gravatar.com/avatar/25301bdb527e5665782958948a627b65","rate":110,"stats":{},"status":"ready","tags":[{"soId":"wordpress","short":"wordpress","name":"wordpress","_id"
:"514825fa2a26ea0200000010","levels":["beginner","intermediate","expert"]},{"soId":"wordpress-plugin","short":"wordpress-plugin","name":"wordpress-plugin","_id":"5181d0aa66a6f999a465ed64","levels":["beginner","intermediate","expert"]},{"soId":"wordpress-theming","short":"wordpress-theming","name":"wordpress-theming","_id":"5181d0aa66a6f999a465ee4c","levels":["beginner","intermediate","expert"]},{"soId":"woocommerce","short":"woocommerce","name":"woocommerce","_id":"5321adc61c67d1a4859d2785","levels":["beginner","intermediate","expert"]},{"soId":"node.js","short":"node.js","name":"node.js","_id":"514825fa2a26ea0200000028","levels":["beginner","intermediate","expert"]},{"soId":"balanced-payments","short":"balanced-payments","name":"balanced-payments","_id":"51cb57e266a6f999a465f3ff","levels":["beginner","intermediate","expert"]}],"timezone":"GMT-0500 (CDT)","tw":{"id":86899265,"username":"pmgarman","pic":{"value":"https://pbs.twimg.com/profile_images/436687818778091521/-p5vmYYV_normal.jpeg"}},"updatedAt":"2014-10-08T19:12:05.182Z","userId":"5321ad721c67d1a4859d2784","username":"pmgarman","avatar":"//0.gravatar.com/avatar/c787a39e8e15ac31f2f442737742829c"},"suggestedRate":{"expert":113,"total":146}}],"meta":{"title":"AirPair | php Request","canonical":"https://www.airpair.com/review/54aba41abef06b0b007ffbde","noindex":true},"reviewRender":true} { [Error: Request can only be updated by owner] status: 403 }


